--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,5 +1,5 @@
 # Hugo configuration file
-title: My Site
+title: ARYC
 
 # import hextra as module
 module:
@@ -25,7 +25,7 @@ menu:
       pageRef: /about
       weight: 2
     - name: Contact ↗
-      url: "https://github.com/imfing"
+      url: "https://adventuready.net/contact"
       weight: 3
     - name: Search
       weight: 4
@@ -33,14 +33,14 @@ menu:
         type: search
     - name: GitHub
       weight: 5
-      url: "https://github.com/imfing/hextra-starter-template"
+      url: "https://github.com/mksalada/aryc"
       params:
         icon: github
-    - name: Twitter
+    - name: Facebook
       weight: 6
-      url: "https://twitter.com/"
+      url: "https://facebook.com/AdventuReadyYouthClub"
       params:
-        icon: x-twitter
+        icon: facebook
 
 params:
   navbar:
@@ -48,7 +48,7 @@ params:
     displayLogo: false
 
   footer:
-    displayCopyright: false
+    displayCopyright: true
     displayPoweredBy: true
 
   editURL:
