--- a/hugo.yaml
+++ b/hugo.yaml
@@ -48,9 +48,9 @@ params:
     displayLogo: false
 
   footer:
-    displayCopyright: true
+    displayCopyright: false
     displayPoweredBy: true
 
   editURL:
     enable: true
-    base: "https://github.com/imfing/hextra-starter-template/edit/main/content"
+    base: "https://github.com/mksalada/aryc/edit/main/content"
